--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx,.vue"
   },
   "dependencies": {
     "pinia": "2.1.3",
     "vue": "3.3.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.59.11",
     "@vitejs/plugin-vue": "4.1.0",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-standard-with-typescript": "35.0.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-vue": "9.14.1",
     "husky": "8.0.3",
     "prettier": "2.8.8",
     "sass": "1.63.2",
     "typescript": "5.0.2",
     "vite": "4.3.9",
+    "vite-plugin-eslint": "1.8.1",
     "vue-tsc": "1.4.2"
   }
 }
