--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx,.vue"
+    "lint": "eslint . --ext .ts,.tsx,.vue",
+    "prepare": "husky install"
   },
   "dependencies": {
     "pinia": "2.1.3",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@vitejs/plugin-vue": "4.1.0",
+    "@vue/eslint-config-typescript": "11.0.3",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard-with-typescript": "35.0.0",
@@ -27,6 +29,7 @@
     "typescript": "5.0.2",
     "vite": "4.3.9",
     "vite-plugin-eslint": "1.8.1",
+    "vue-eslint-parser": "9.3.1",
     "vue-tsc": "1.4.2"
   }
 }
